test/cases/compile_errors/undeclared_identifier.zig
export fn a() void {
    return b + c;
}

// error
//
// :2:12: error: use of undeclared identifier 'b'
